  o Added plain-text export (jfs)
  o Added support for reading ASS, SSA and SRT softsubs directly from Matroska files. (AMZ)
  o Fixed loading of SRT and TXT files, which were causing an empty line to appear at the start of the file. (AMZ)
  o Added support for reading v4.00++ (ASS2) files. (AMZ)
  o Added very basic reading support for MPEG-4 Streaming Text (TTXT) subtitles. (AMZ)
  o Added full read-write support for MicroDVD subtitles. (AMZ)
- Changes to main menu:
  o There are now new options, and most were moved around to have better organization. (AMZ/jfs)
  o General tweaks changes, such as better icons, and fixing of flickering and slowness. (AMZ)
  o Undo and redo now have descriptions. (Dansolo)
  o Merged the three "Recombine" functions into a single one that autodetects the correct type, and also supports two new cases. (AMZ)
- Subtitles grid changes:
  o Fixed line selection after pasting. (AMZ)
  o Plain-text lines can now be pasted into the grid. They will be inserted as default lines with the text as their content. (AMZ)
  o Added Paste Over function, which allows you to paste subtitle lines over others, overwriting the fields of your choice. (AMZ)
  o Scrollbar in grid didn't always allow scrolling through all the subs. (jfs)
  o Minor fix to the calculation of the grid's "Style" column width. (AMZ)
- Subtitles edit box changes:
  o The whole layout has been tweaked. (AMZ)
  o Replaced wxTextCtrl with wxStyledTextCtrl, to solve many issues related to the Rich Text edit control. (AMZ)
  o Improved Syntax Highlighter to include more features of ASS. (AMZ)
  o Added an inline Hunspell-based Spell Checker. (AMZ)
  o Added an inline MyThes-based Thesaurus. (AMZ)
  o Times can now be copy and pasted with Ctrl+C and Ctrl+V, as well as from context menu, in the time edit boxes. (AMZ)
  o Layer box replaced with a spin control in the subtitles edit box. (AMZ)
  o Commiting text now commits times as well. (AMZ)